--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 crossterm = "0.29.0"
+tui-textarea = "0.7.0"
 color-eyre = "0.6.3"
 rand = "0.9.1"
+anyhow = "1.0.98"
