--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "ratatui-learning"
+name = "rataplay"
+description = "A collection of minigames using Ratatui"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+repository = "https://github.com/Thompson6626/Rataplay"
+readme = "README.md"
+keywords = ["cli", "games", "terminal", "tui", "ratatui"]
+license = "MIT"
 
 [dependencies]
 ratatui = { version = "0.29.0", features = ["all-widgets"] }
 crossterm = "0.29.0"
-tui-textarea = "0.7.0"
-color-eyre = "0.6.3"
 rand = "0.9.1"
-anyhow = "1.0.98"
